--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,6 +1,7 @@
 disabled_rules:
     - line_length
     - force_cast
+    - unused_optional_binding
 
 
 excluded: # paths to ignore during linting. Takes precedence over `included`.
