--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -2,6 +2,7 @@ disabled_rules:
     - line_length
     - force_cast
     - unused_optional_binding
+    - unused_closure_parameter
 
 
 excluded: # paths to ignore during linting. Takes precedence over `included`.
